see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-Mar-2012 Christophe Demko
 # [#27951] Missing parameter handling in magic proxy methods for name quotes (Sven Hurt)
 # [#28151] *Joomla! 2.5 - Multilanguage feature - external links end with 404
 # [#28206] Result Description "if condition" was missing in com_finder (Skunk Sie)

05-Mar-2012 Jean-Marie Simonet
 # [#28198] Beez 5 generating warings/notices. Thanks Elin
 # [#28199] Archive module error when no articles are archived. Thanks Elin
 # [#27889] change permissions in language manager changes default language to english. Thanks Christophe

04-Mar-2012 Jean-Marie Simonet
 # [#28190] com_search: Show Search Results results in PHP fatal error. Thanks John
 #$ [#27751] Installation - Check to ensure the schema file exists. Thanks Michael and Mark
 # [#27780] Duplicate Template Styles. Thanks Reinhard

04-Mar-2012 Christophe Demko
 # [#27770] loadposition strips the $ character from html modules
 # [#28086] No access to params "images" in mod_articles_news (Jean-Marie Simonet)
 # [#26602] Front end article creation in unpublished category (Elin Waring)
 # [#27779] "Articles" H1 tag appearing before the article title... (Franz Korntner)
 # [#23414] Flash uploader rtl - browse button disabled (Ofer Cohen)

03-Mar-2012 Mark Dexter
 # [#28001] path delimiter doesn't work properly on SQL Server and SQL Azure
 # [#27898] System cache throws warning on Ajax requests with JSON response
 # [#27150] PHP Fatal error when detele a article category assigned to a artcle categories module** 
 # [#28046] Update MooTools to version 1.4.4

03-Mar-2012 Christophe Demko