@@ -41,7 +41,7 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
 					<?php echo JHtml::_('grid.sort', 'COM_INSTALLER_HEADING_LOCATION', 'client_id', $listDirn, $listOrder); ?>
 				</th>
 				<th width="10%" class="center">
-					<?php echo JHtml::_('grid.sort', 'JSTATUS', 'enabled', $listDirn, $listOrder); ?>
+					<?php echo JHtml::_('grid.sort', 'JSTATUS', 'status', $listDirn, $listOrder); ?>
 				</th>
 				<th>
 					<?php echo JHtml::_('grid.sort', 'COM_INSTALLER_HEADING_TYPE', 'type', $listDirn, $listOrder); ?>
@@ -72,7 +72,7 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
 		</tfoot>
 		<tbody>
 		<?php foreach ($this->items as $i => $item): ?>
-			<tr class="row<?php echo $i%2; if ($item->protected) echo ' protected';?>">
+			<tr class="row<?php echo $i%2; if ($item->status == 2) echo ' protected';?>">
 				<td>
 					<?php echo JHtml::_('grid.id', $i, $item->extension_id); ?>
 				</td>
@@ -88,7 +88,7 @@ $listDirn	= $this->escape($this->state->get('list.direction'));
 					<?php if (!$item->element) : ?>
 					<strong>X</strong>
 					<?php else : ?>
-						<?php echo JHtml::_('jgrid.published', $item->enabled, $i, 'manage.');?>
+						<?php echo JHtml::_('InstallerHtml.Manage.state', $item->status, $i, $item->status < 2, 'cb'); ?>
 					<?php endif; ?>
 				</td>
 				<td class="center">
