@@ -169,6 +169,7 @@ class MenusModelItems extends JModelList
 
 		// Select all fields from the table.
 		$query->select($this->getState('list.select', 'a.*'));
+		$query->select('a.published+2*(e.enabled-1) as published');
 		$query->from($db->quoteName('#__menu').' AS a');
 
 		// Join over the language
@@ -194,6 +195,10 @@ class MenusModelItems extends JModelList
 			$query->join('LEFT', '#__associations AS asso2 ON asso2.key = asso.key');
 			$query->group('a.id');
 		}
+
+		// Join over the extensions
+		$query->select('e.name AS name');
+		$query->join('LEFT', '#__extensions AS e ON e.extension_id = a.component_id');
 
 		// Exclude the root category.
 		$query->where('a.id > 1');
