@@ -10,6 +10,11 @@ COM_INSTALLER_ENABLED_UPDATES_MORE=", %s disabled sites were enabled"
 COM_INSTALLER_ERROR_DISABLE_DEFAULT_TEMPLATE_NOT_PERMITTED="Disable default template is not permitted"
 COM_INSTALLER_ERROR_METHOD="Method Not Implemented"
 COM_INSTALLER_ERROR_NO_EXTENSIONS_SELECTED="No extensions selected"
+COM_INSTALLER_EXTENSION_DISABLE="Disable extension"
+COM_INSTALLER_EXTENSION_DISABLED="Disabled extension"
+COM_INSTALLER_EXTENSION_ENABLE="Enable extension"
+COM_INSTALLER_EXTENSION_ENABLED="Enabled extension"
+COM_INSTALLER_EXTENSION_PROTECTED="Protected extension"
 COM_INSTALLER_EXTENSION_PUBLISHED="Extension successfully enabled."
 COM_INSTALLER_EXTENSION_UNPUBLISHED="Extension successfully disabled."
 COM_INSTALLER_FAILED_TO_ENABLE_UPDATES=", failed to enable updates"
