@@ -17,6 +17,10 @@ COM_MENUS_EDIT_MODULE_SETTINGS="Edit module settings"
 COM_MENUS_ERROR_ALL_LANGUAGE_ASSOCIATED="A menu item set to All languages can't be associated. Associations have not been set."
 COM_MENUS_ERROR_ALREADY_HOME="Menu item already set to home"
 COM_MENUS_ERROR_ONE_HOME="Only one menu item can be a home link for each language"
+COM_MENUS_EXTENSION_PUBLISHED_DISABLED="Component disabled and menu item published"
+COM_MENUS_EXTENSION_PUBLISHED_ENABLED="Component enabled and menu item published"
+COM_MENUS_EXTENSION_UNPUBLISHED_DISABLED="Component disabled and menu item unpublished"
+COM_MENUS_EXTENSION_UNPUBLISHED_ENABLED="Component enabled and menu item unpublished"
 COM_MENUS_FIELD_FEEDLINK_DESC="Display a feed link for this menu item"
 COM_MENUS_FIELD_FEEDLINK_LABEL="Feed link"
 COM_MENUS_FIELD_VALUE_IGNORE="Ignore"
@@ -33,6 +37,10 @@ COM_MENUS_HEADING_NUMBER_MENU_ITEMS="Number of Menu Items"
 COM_MENUS_HEADING_PUBLISHED_ITEMS="# Published"
 COM_MENUS_HEADING_TRASHED_ITEMS="# Trashed"
 COM_MENUS_HEADING_UNPUBLISHED_ITEMS="# Unpublished"
+COM_MENUS_HTML_PUBLISH_DISABLED="Publish menu item::Component disabled"
+COM_MENUS_HTML_PUBLISH_ENABLED="Publish menu item::Component enabled"
+COM_MENUS_HTML_UNPUBLISH_DISABLED="Unpublish menu item::Component disabled"
+COM_MENUS_HTML_UNPUBLISH_ENABLED="Unpublish menu item::Component enabled"
 COM_MENUS_INTEGRATION_FIELDSET_LABEL="Integration Options"
 COM_MENUS_ITEM_ASSOCIATIONS_FIELDSET_LABEL="Menu Item Associations"
 COM_MENUS_ITEM_ASSOCIATIONS_FIELDSET_DESC="Multilanguage only! This choice will only display if the Language Filter parameter 'Menu Associations' is set to 'Yes'. Choose a menu item for the target language. This association will let the Language Switcher module redirect to the associated menu item in another language. If used, make sure to display the Language switcher module on the concerned pages. A menu item set to language 'All' can't be associated."
