@@ -81,6 +81,7 @@ JON="On"
 JOPTIONS="Options"
 JPREV="Prev"
 JPREVIOUS="Previous"
+JPROTECTED="Protected"
 JPUBLISHED="Published"
 JRECORD_NUMBER="Record Number"
 JREGISTER="Register"
